--- a/src/pages/homepage.styles.scss
+++ b/src/pages/homepage.styles.scss
@@ -49,9 +49,11 @@
           @media (max-width: 1035px){
             display: none;
           }
-          width: 610px;
-          border-radius: 15px;
+          width: 540px;
+          height: 400px;
+          border-radius: 10px;
           margin: 0px;
+          
         }
     }
 }
