--- a/src/components/navbar/navbar.component.scss
+++ b/src/components/navbar/navbar.component.scss
@@ -130,7 +130,8 @@
     transition: height 1s ease;
     transition: opacity 1s;
     background-color: #c3c1d12a;
-    opacity: 0;
+    // opacity: 0;
+    display: none;
   }
 }
 .untoggled{
@@ -139,7 +140,7 @@
     transition: height 2s ease;
     transition: opacity 2s;
     background-color: #c3c1d12a;
-    opacity: 1;
+    // opacity: 1;
   }
 
 }
